kubernetes/unifi/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unifi
  labels:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/part-of: unifi
